Adds hover to product categories

--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="wishlist__add-btn"></a>
-                  <a href="#" class="shopping-cart__add-btn"></a>
-                  <a href="#" class="quick-view__btn"></a>
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
                 </div>
                 <div class="prod-categories__title">Product title 03</div>
                 <div class="item__price-list mb-4">
