Adds hover effects to categories products and changes type of tag of image and title from div to anchor

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                   <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
                   <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
                 </div>
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
