Adds products to other tab containers

--- a/index.html
+++ b/index.html
@@ -322,64 +322,235 @@
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-2.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-2.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-3.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-3.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-4.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-4.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-5.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-5.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-6.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-6.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-7.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-7.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
               <div class="prod-categories__item text-center col-3">
-                <img src="img/prod_categor-8.jpg" class="prod-categories__img mb-4" alt="Product categories image">
-                <div class="prod-categories__title">Product title 03</div>
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-8.jpg" class="prod-categories__img" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
                   <span class="item__price item__price--old mx-1">$350</span>
                   <span class="item__price item__price--new mx-1">$299,99</span>
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
-            <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eaque laboriosam magni tempora numquam, nisi dignissimos iste, omnis provident in nesciunt amet deleniti ullam veniam. Autem natus obcaecati laboriosam inventore.</div>
+            <div class="tab-pane fade" id="categories-2" role="tabpanel" aria-labelledby="categories-2-tab">
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-4.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-5.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-6.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-7.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="categories-3" role="tabpanel" aria-labelledby="categories-3-tab">
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-4.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-3.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-2.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+              <div class="prod-categories__item text-center col-3">
+                <a href="#" class="prod-categories__img mb-4 d-block">
+                  <img src="img/prod_categor-1.jpg" alt="Product categories image">
+                </a>
+                <div class="prod-categories__hover-buttons">
+                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
+                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
+                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                </div>
+                <a href="#" class="prod-categories__title">Product title 03</a>
+                <div class="item__price-list mb-4">
+                  <span class="item__price item__price--old mx-1">$350</span>
+                  <span class="item__price item__price--new mx-1">$299,99</span>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
