Change type of tag from anchor to button in hover buttons in product categories

--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -326,9 +326,9 @@
                   <img src="img/prod_categor-2.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -341,9 +341,9 @@
                   <img src="img/prod_categor-3.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -356,9 +356,9 @@
                   <img src="img/prod_categor-4.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -371,9 +371,9 @@
                   <img src="img/prod_categor-5.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -386,9 +386,9 @@
                   <img src="img/prod_categor-6.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -401,9 +401,9 @@
                   <img src="img/prod_categor-7.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -416,9 +416,9 @@
                   <img src="img/prod_categor-8.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -433,9 +433,9 @@
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -448,9 +448,9 @@
                   <img src="img/prod_categor-5.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -463,9 +463,9 @@
                   <img src="img/prod_categor-6.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -478,9 +478,9 @@
                   <img src="img/prod_categor-7.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -495,9 +495,9 @@
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -510,9 +510,9 @@
                   <img src="img/prod_categor-3.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -525,9 +525,9 @@
                   <img src="img/prod_categor-2.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -540,9 +540,9 @@
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
                 <div class="prod-categories__hover-buttons">
-                  <a href="#" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></a>
-                  <a href="#" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></a>
-                  <a href="#" class="hover-buttons__item quick-view__btn icon-font-eye"></a>
+                  <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                  <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
