--- a/index.html
+++ b/index.html
@@ -552,6 +552,41 @@
               </div>
             </div>
           </div>
+
+          <div class="q-view-popup mfp-hide row" id="q-view-popup">
+            <div class="q-view-popup__image-slider col-sm-6">
+              <div class="q-view-popup__slide">
+                <img src="img/prod_categor-6.jpg" alt="Name or description of product in popup">
+              </div>
+              <div class="q-view-popup__slide">
+                <img src="img/prod_categor-7.jpg" alt="Name of description of product in popup">
+              </div>
+            </div>
+            <div class="q-view-popup__information col-sm-6">
+              <h3 class="q-view-popup__title"><a href="#">Product name</a></h3>
+              <span class="q-view-popup__price">$50.00</span>
+              <div class="q-view-popup__rating item-rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="q-view-popup__quantity">
+                <span class="quantity__minus">-</span>
+                <input type="number" class="quantity__number-input" min="1" step="1" pattern="[0-9]*" value="1" inputmode="numeric">
+                <span class="quantity__plus">+</span>
+                <button class="q-view-popup__btn btn">Add to cart</button>
+              </div>
+              <div class="q-view-popup__category">Category:<a href="#" class="q-view-popup__link">Some category</a></div>
+              <div class="q-view-popup__tags">Tags:
+                <a href="#" class="q-view-popup__link">eco</a>,
+                <a href="#" class="q-view-popup__link">health</a>
+              </div>
+              <a href="#" class="q-view-popup__full-info-link">Show full details</a>
+            </div>
+          </div>
+
         </section>
       </div>
     </div>
