--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Modals (located this, becouse it recommended by authors Bootstrap 4. If I understood correctly.) -->
+  <div class="modal fade" id="q-view-popup" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="q-view-popup modal-content row">
+        <div class="q-view-popup__image-slider col-sm-6">
+          <div class="q-view-popup__slide">
+            <img src="img/prod_categor-6.jpg" alt="Name or description of product in popup">
+          </div>
+          <div class="q-view-popup__slide">
+            <img src="img/prod_categor-7.jpg" alt="Name of description of product in popup">
+          </div>
+        </div>
+        <div class="q-view-popup__information col-sm-6">
+          <h3 class="q-view-popup__title"><a href="#">Product name</a></h3>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <span class="q-view-popup__price">$50.00</span>
+          <div class="q-view-popup__rating item-rating">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="q-view-popup__quantity">
+            <span class="quantity__minus">-</span>
+            <input type="number" class="quantity__number-input" min="1" step="1" pattern="[0-9]*" value="1" inputmode="numeric">
+            <span class="quantity__plus">+</span>
+            <button class="q-view-popup__btn btn">Add to cart</button>
+          </div>
+          <div class="q-view-popup__category">Category:<a href="#" class="q-view-popup__link">Some category</a></div>
+          <div class="q-view-popup__tags">Tags:
+            <a href="#" class="q-view-popup__link">eco</a>,
+            <a href="#" class="q-view-popup__link">health</a>
+          </div>
+          <a href="#" class="q-view-popup__full-info-link">Show full details</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <header class="container-fluid page-header">
     <div class="header-top row px-3">
       <div class="header-top__left col-4 d-flex align-items-center pl-4">
@@ -313,7 +354,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -328,7 +369,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -343,7 +384,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -358,7 +399,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -373,7 +414,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -388,7 +429,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -403,7 +444,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -418,7 +459,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -435,7 +476,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -450,7 +491,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -465,7 +506,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -480,7 +521,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -497,7 +538,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -512,7 +553,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -527,7 +568,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -542,7 +583,7 @@
                 <div class="prod-categories__hover-buttons">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
-                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye"></button>
+                  <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
                 </div>
                 <a href="#" class="prod-categories__title">Product title 03</a>
                 <div class="item__price-list mb-4">
@@ -552,41 +593,6 @@
               </div>
             </div>
           </div>
-
-          <div class="q-view-popup mfp-hide row" id="q-view-popup">
-            <div class="q-view-popup__image-slider col-sm-6">
-              <div class="q-view-popup__slide">
-                <img src="img/prod_categor-6.jpg" alt="Name or description of product in popup">
-              </div>
-              <div class="q-view-popup__slide">
-                <img src="img/prod_categor-7.jpg" alt="Name of description of product in popup">
-              </div>
-            </div>
-            <div class="q-view-popup__information col-sm-6">
-              <h3 class="q-view-popup__title"><a href="#">Product name</a></h3>
-              <span class="q-view-popup__price">$50.00</span>
-              <div class="q-view-popup__rating item-rating">
-                <span class="icon-font-star-solid"></span>
-                <span class="icon-font-star-solid"></span>
-                <span class="icon-font-star-solid"></span>
-                <span class="icon-font-star-solid"></span>
-                <span class="icon-font-star-regular"></span>
-              </div>
-              <div class="q-view-popup__quantity">
-                <span class="quantity__minus">-</span>
-                <input type="number" class="quantity__number-input" min="1" step="1" pattern="[0-9]*" value="1" inputmode="numeric">
-                <span class="quantity__plus">+</span>
-                <button class="q-view-popup__btn btn">Add to cart</button>
-              </div>
-              <div class="q-view-popup__category">Category:<a href="#" class="q-view-popup__link">Some category</a></div>
-              <div class="q-view-popup__tags">Tags:
-                <a href="#" class="q-view-popup__link">eco</a>,
-                <a href="#" class="q-view-popup__link">health</a>
-              </div>
-              <a href="#" class="q-view-popup__full-info-link">Show full details</a>
-            </div>
-          </div>
-
         </section>
       </div>
     </div>
